# datalith

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.image  Makefile  README.md  docker-compose.image.yml  docker-compose.yml
.github/workflows/: ci-version.yml  ci.yml
datalith/: Cargo.toml  README.md
datalith-base/: .gitignore  Cargo.toml
datalith-base/src/: datalith.rs  datalith_errors.rs  functions.rs  lib.rs
datalith-base/src/sql/: schema.sql
datalith-base/tests/: global.rs  test.rs
datalith-core/: Cargo.toml  LICENSE  README.md
datalith-core/src/: datalith.rs  datalith_errors.rs  datalith_file.rs  functions.rs  guard.rs  lib.rs  magic_cookie_pool.rs
datalith-core/src/image/: datalith_image.rs  datalith_image_errors.rs  mod.rs  sync.rs
datalith-core/src/manager/: datalith_manager.rs  datalith_manager_errors.rs  mod.rs
datalith-core/src/resources/: datalith_resource.rs  mod.rs
datalith-core/src/sql/: schema.sql
datalith-core/tests/: auto_file_extension.rs  basic.rs  clean_up.rs  convert.rs  global.rs  parallel_and_temporary.rs  upload_download_data.rs
datalith/src/: cli.rs  main.rs
datalith/src/rocket_mounts/: fetch.rs  fetch_image.rs  mod.rs  operate.rs  operate_image.rs
datalith/src/rocket_mounts/rocket_utils/: content_length.rs  datalith_response.rs  datalith_response_image.rs  mod.rs  response_data.rs
patches/: config.patch  configure.patch
