[package]
name = "datalith-base"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/datalith"
homepage = "https://magiclen.org/datalith"
keywords = ["datalith", "sqlite", "storage", "file", "oss"]
categories = ["filesystem", "database"]
description = "A file management system powered by SQLite for metadata storage and the file system for file storage."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }

sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }

num_cpus = "1"
chrono = "0.4"

sha2 = "0.10"
mime = "0.3"
mime_guess = "2"
short-crypt = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
slash-formatter = "3"