[package]
name = "datalith-core"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/magiclen/datalith"
homepage = "https://magiclen.org/datalith"
keywords = ["datalith", "sqlite", "storage", "file", "oss"]
categories = ["filesystem", "database"]
description = "A file management system powered by SQLite for metadata storage and the file system for file storage."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }

sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono", "uuid" ] }

num_cpus = "1"
chrono = "0.4"

educe = { version = "0.5", default-features = false, features = ["Debug", "PartialEq", "Eq"] }
once_cell = { version = "1", optional = true }

sha2 = "0.10"
mime = "0.3"
mime_guess = "2"
magic = { version = "0.16", optional = true }

fs4 = { version = "0.9", features = ["tokio"] }

uuid = { version = "1", features = [ "v4" ] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
manifest-dir-macros = "0.1"
slash-formatter = "3"

[features]
default = ["magic"]
magic = ["dep:magic", "dep:once_cell"]