[package]
name = "datalith-core"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/magiclen/datalith"
homepage = "https://magiclen.org/datalith"
keywords = ["datalith", "sqlite", "storage", "file", "oss"]
categories = ["filesystem", "database"]
description = "A file management system powered by SQLite for metadata storage and the file system for file storage."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
tokio-cron-scheduler = { version = "0.14", optional = true }

tracing = "0.1"

sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono", "uuid" ] }
rdb-pagination = { version = "0.3", features = ["sqlite"] }

num_cpus = "1"
chrono = "0.4"

educe = { version = "0.5", default-features = false, features = ["Debug", "Default", "PartialEq", "Eq", "Hash"] }
once_cell = { version = "1", optional = true }

sha2 = "0.10"
mime = "0.3"
mime_guess = "2"
magic = { version = "0.16", optional = true }

fs4 = { version = "0.13", features = ["tokio"] }

uuid = { version = "1", features = [ "v4" ] }
rand = "0.9"
trim-in-place = "0.1"

image-convert = { version = "0.20.1", optional = true }
rc-u8-reader = { version = "2", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
manifest-dir-macros = "0.1"
lazy-static-include = "3"
slash-formatter = "3"

[features]
default = ["magic", "image-convert", "manager"]
magic = ["dep:magic", "dep:once_cell"]
image-convert = ["dep:image-convert", "dep:rc-u8-reader", "dep:regex"]
manager = ["dep:tokio-cron-scheduler"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]